同步组件优化，回调接口优化